# experiments

./: decaying_array.cpp
asm/: first_program.asm
c++/: basic_memory_allocation_options.cpp  bit_hacks.cpp  c_out_of_scope_string.c  c_struct_syntax.c  closures_and_functors.cpp  environment_read_methods.cpp  function_types.cpp  gcc15_union_initialization.c  global_variables.cpp  lambda_const_abuse.cpp  leetcode_binary_instructions.cpp  leetcode_longest_palindrome.cpp  libinput.cpp  memory_antics.cpp  non_blocking_input.cpp  qt_playground.cpp  scratch.cpp  shebang.cpp  sizeof_standard_types.cpp  source_location.cpp  std_thread_arguments.cpp  type_erased_assets.cpp  type_erased_vtables.cpp  unique_ptr_stack.cpp  user_defined_literals.cpp  val_brent_complete.c  val_spicy_brentq.c
c++/libraries/: code_helpers.h
c++/llm/: opencl_boilerplate.cpp
cl_scripts/: nvidia_diagnostic.cl
cpp_pure_abstract_classes/: main.cpp
getter_vs_struct/: main.cpp  xmake.lua
lisp_sbcl/: nvidia_diagnostic.lisp  static_types.cl
python/: crash_handling.py  int_digits.py  loop_benchmark.py
restrict_tests/: Without_restrict.c  Without_restrict_F77.f  Without_restrict_F772.f  Without_restrict_F90.F90  Without_restrict_F902.F90  xmake.lua
rust/: Cargo.toml  hash_or_vec.rs  prefault.rs
sfml_package/: CMakeLists.txt  main.cpp
src/: glad.c
